--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ body {
     font-size: 24px;
     width: 250px;
     border: none;
-    border-bottom: 4px solid #9b59b6;
+    border-bottom: 4px solid #0f1ef3;
     outline: none;
     font-family: Arial, Helvetica, sans-serif;
 }
